[gd_scene load_steps=17 format=3 uid="uid://ds8etcq0a3sq2"]

[ext_resource type="PackedScene" uid="uid://dj1dhf6q37ntp" path="res://scenes/killzone.tscn" id="1_5se8a"]
[ext_resource type="Script" uid="uid://hsm71m1o286l" path="res://scripts/enemy_follows.gd" id="1_p4x2y"]
[ext_resource type="Texture2D" uid="uid://sdl1yr4fpsgk" path="res://assets/Player/idle.png" id="2_p4x2y"]
[ext_resource type="Texture2D" uid="uid://djfowxke0m2cc" path="res://assets/Player/run.png" id="3_us1bk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lpdmv"]
size = Vector2(7, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2hm4e"]
size = Vector2(11, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqgy"]
atlas = ExtResource("2_p4x2y")
region = Rect2(0, 0, 20, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("2_p4x2y")
region = Rect2(20, 0, 20, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("2_p4x2y")
region = Rect2(40, 0, 20, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("2_p4x2y")
region = Rect2(60, 0, 20, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("3_us1bk")
region = Rect2(150, 0, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("3_us1bk")
region = Rect2(30, 0, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("3_us1bk")
region = Rect2(60, 0, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("3_us1bk")
region = Rect2(90, 0, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("3_us1bk")
region = Rect2(120, 0, 30, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_qob73"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}],
"loop": true,
"name": &"Idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}]

[node name="enemy_follows" type="CharacterBody2D"]
script = ExtResource("1_p4x2y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -11)
shape = SubResource("RectangleShape2D_lpdmv")

[node name="Killzone (temp)" parent="." instance=ExtResource("1_5se8a")]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone (temp)"]
position = Vector2(0.5, -12)
shape = SubResource("RectangleShape2D_2hm4e")
debug_color = Color(0.995213, 0, 0.209153, 0.42)

[node name="AnimatedSprite2DEnemy" type="AnimatedSprite2D" parent="."]
modulate = Color(0, 0.703546, 0.825651, 1)
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_qob73")
animation = &"Idle"
autoplay = "Idle"

[node name="FOV" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FOV"]
position = Vector2(40.0033, -25)
scale = Vector2(4.58577, 3.625)
polygon = PackedVector2Array(-9, 0, 5, -10, 10, 0, 5, 10)

[node name="Timer" type="Timer" parent="FOV"]
wait_time = 5.0

[node name="RayCastWall" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(1, -28.5)
target_position = Vector2(10, 0)

[node name="RayCastLedgeRight" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(4, 3.5)
target_position = Vector2(0, 45)

[node name="RayCastLedgeLeft" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(-3, 3.5)
target_position = Vector2(0, 45)

[node name="RayCastJump" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(1.5, -2)
target_position = Vector2(10, 0)

[connection signal="area_entered" from="Killzone (temp)" to="." method="_on_killzone_temp_area_entered"]
[connection signal="body_entered" from="FOV" to="." method="_on_fov_body_entered"]
[connection signal="body_exited" from="FOV" to="." method="_on_fov_body_exited"]
[connection signal="timeout" from="FOV/Timer" to="." method="_on_timer_timeout"]
